Fixed media object bug on IE

--- a/src/scss/core/mixin/component/_media.scss
+++ b/src/scss/core/mixin/component/_media.scss
@@ -29,6 +29,7 @@ $bs-c-media-margin: $bs-base-line-height !default;
 
 @mixin bs-c-media__figure() {
 	margin-right: $bs-c-media-margin;
+	flex: none;
 
 	> * {
 		vertical-align: top;
